# jianshenapp

./: .editorconfig  .env.example  .gitignore  AGENTS.md  README.md  RTK.md  docker-compose.yml  netlify.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  render.yaml  rtk.cmd  start-local.cmd  tsconfig.base.json  turbo.json
apps/ai-service/: .env.example  .gitignore  Dockerfile  README.md  package.json  pyproject.toml
apps/ai-service/app/: __init__.py  main.py
apps/ai-service/app/api/: routes.py
apps/ai-service/app/core/: __init__.py  config.py  errors.py  logging.py  responses.py
apps/ai-service/app/knowledge/: knowledge_base.json
apps/ai-service/app/models/: __init__.py  schemas.py
apps/ai-service/app/prompts/: diet_explanation_task.txt  plan_adjustment_task.txt  rag_answer_task.txt  system.txt  training_explanation_task.txt
apps/ai-service/app/services/: __init__.py  auth.py  boundary.py  coaching.py  container.py  llm.py  middleware.py  orchestrator.py  prompting.py  rag.py  rule_engine.py  safety.py
apps/ai-service/tests/: test_api.py  test_config.py
docs/: acceptance-criteria.md  ai-architecture.md  api-design.md  assumptions.md  compliance-data-policy.md  db-schema.md  decisions.md  implementation-roadmap.md  page-tree.md  prd-mvp.md  product-overview.md  production-runbook.md  progress.md  prompt-strategy.md  release-checklist.md  repo-structure.md  system-architecture.md  user-stories.md
scripts/: backup-postgres.ps1  db-init.mjs  db-seed.mjs  dev.mjs  format-check.mjs  format.mjs  lint.mjs  local-postgres.mjs  local-schema.mjs  test.mjs  (+10 more)
(+319 files in other folders)
